fix: Small initial page shift due to link resize

--- a/src/components/LinkList/LinkList.css
+++ b/src/components/LinkList/LinkList.css
@@ -41,6 +41,7 @@
 }
 
 .LinkList-link {
+    height: 32px;
 }
 
 .LinkList-link-img {
